k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-blog-lb
  namespace: blog-dev
spec:
  selector:
    app: flask-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
