k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-blog-service
  namespace: blog-dev
  labels:
    app: flask-blog
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-blog
